force-app/main/default/objects/OrderSummary/fields/AVA_B2BLEX__Invoice_Message__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__Invoice_Message__c</fullName>
    <description>This field record invoice message, VAT/BIN message</description>
    <inlineHelpText>A VAT message field returned by AvaTax indicating the relevant tax law invoked</inlineHelpText>
    <label>Invoice Message</label>
    <type>TextArea</type>
</CustomField>