force-app/main/default/objects/OrderSummary/fields/AVA_B2BLEX__Transport__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__Transport__c</fullName>
    <inlineHelpText>This specifies who is responsible for transport of the goods on the transaction</inlineHelpText>
    <label>Transport</label>
    <length>50</length>
    <type>Text</type>
</CustomField>