force-app/main/default/objects/OrderSummary/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Summaries</relationshipLabel>
    <relationshipName>Order_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>