force-app/main/default/objects/OrderSummary/fields/Historical_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Historical_Order_Date__c</fullName>
    <label>Historical Order Date</label>
    <type>DateTime</type>
</CustomField>