force-app/main/default/objects/OrderSummary/fields/Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Date__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Historical_Order_Date__c)),
    DATEVALUE(Historical_Order_Date__c),
    DATEVALUE(OrderedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordered Date</label>
    <type>Date</type>
</CustomField>