force-app/main/default/objects/OrderSummary/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>