force-app/main/default/objects/OrderSummary/fields/Run_Callouts__c.field-meta.xml
<CustomField>
    <fullName>Run_Callouts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Callouts</label>
    <type>Checkbox</type>
</CustomField>