force-app/main/default/objects/OrderSummary/fields/Schoox_Callout_Response__c.field-meta.xml
<CustomField>
    <fullName>Schoox_Callout_Response__c</fullName>
    <label>Schoox Callout Response</label>
    <type>TextArea</type>
</CustomField>