force-app/main/default/objects/OrderSummary/fields/Total_Amount_After_Refund__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_After_Refund__c</fullName>
    <formula>IF(Total_Refunded_Amount__c &gt; 0, (TotalAdjustedProductAmount+TotalAdjustedDeliveryAmount+TotalTaxAmount)-Total_Refunded_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount After Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>