force-app/main/default/objects/OrderSummary/fields/Total_Refunded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Refunded_Amount__c</fullName>
    <label>Total Refunded Amount</label>
    <summarizedField>OrderItemSummary.Refunded_Amount__c</summarizedField>
    <summaryForeignKey>OrderItemSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>