force-app/main/default/objects/OrderSummary/fields/Veracore_Callout_Response__c.field-meta.xml
<CustomField>
    <fullName>Veracore_Callout_Response__c</fullName>
    <label>Veracore Callout Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>