force-app/main/default/objects/OrderSummary/fields/Veracore_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Veracore_Order_Id__c</fullName>
    <displayFormat>SF{0000000}</displayFormat>
    <label>Veracore Order Id</label>
    <type>AutoNumber</type>
</CustomField>