force-app/main/default/objects/OrderSummary/listViews/all_order_summaries.listView-meta.xml
<ListView>
    <fullName>all_order_summaries</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Person_Account_Name__c</columns>
    <columns>CreatedDate</columns>
    <columns>OrderedDate</columns>
    <columns>GrandTotalAmount</columns>
    <columns>InvoiceId__c</columns>
    <columns>Veracore_Order_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Order Summaries</label>
</ListView>